fix playlist item width and text overflowing

--- a/app/styles/block/playlist.less
+++ b/app/styles/block/playlist.less
@@ -38,5 +38,6 @@
   &--tracks-item {
     display: inline-block;
     vertical-align: top;
+    width: 125px;
   }
 }
